# othello

./: Cargo.toml  README.md
.cargo/: config.toml
src/: board.rs  cli.rs  evaluation.rs  gui.rs  lib.rs  main.rs  othello_lib.rs
src/othello_lib/: board.rs
