[package]
name = "othello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
local-ip-address = "0.4.8"
num = "0.4"
eframe = "0.19.0"
# [dependencies.windows]
# version = "0.40.0"
# features = [
#     "Data_Xml_Dom",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_System_Threading",
#     "Win32_System_Console",
#     "Win32_UI_WindowsAndMessaging",
# ]